tasklist/static/css/style.css
body {
font-family: 'Ubuntu Mono', monospace;
}


#main {
    margin: 10px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
}

.navbar {
    border-radius: 0 !important;
}

.navbar p {
    padding-left: 15px;
}

#tasklist {

}

#taskform {

}

.form-control {
    font-size: 1.2em;
}

#tasklist ul{
    list-style-type: none;
    padding: 0;
}

#tasklist li {
    font-size: 1.3em;
    margin: 0 0 8px 0;
    -o-transition:0.2s;
    -ms-transition:0.2s;
    -moz-transition:0.2s;
    -webkit-transition:0.2s;
    transition:0.2s;
}

#tasklist li:hover {
    background-color: #e8f6ff;
}

.taskwrapper {
    text-transform: lowercase;
    height: 30px;

}

.taskwrapper h4{
    margin: 0;
    font-size: 1.5em;
    display: inline;
    vertical-align: middle;
    word-wrap: break-word;
}

.taskwrapper p {
    margin: 0;
    font-size: 0.75em;
    display: inline;
    color: #CCC;
    line-height: 33px;
    vertical-align: middle;
}

.task-right {
    float: right;
}

.task-left {
    float: left;

}

.completed {
    text-decoration: line-through;
    opacity: 0.5;
}


.progress-work {
  background-color: #0099DD;
}

.progress-rest {
  background-color: #00DD99;
}

